# ai-light-song-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  analyze  docker-compose.yml  fix_intensity.py  pyproject.toml  requirements.txt  test_candidates.py  test_check_energy.py  test_check_energy2.py  test_essentia_urls.py  test_machine.py  test_ml.py  test_rules.py  test_run.py
.github/: copilot-instructions.md
benchmark_annotations/: README.md  Sash - Raindrops.json  What a Feeling - Courtney Storm.json
docs/: 1.1.stem_separation_story.md  1.2.beat_tempo_detection_story.md  1.3.fft_band_extraction_story.md  1.4.mix_and_per_stem_loudness_story.md  1.5.unified_perceptual_embedding_story.md  2.1.hpcp_extraction_story.md  2.2.chord_detection_story.md  2.3.find_chord_patterns_story.md  2.3.key_tonal_center_story.md  2.4.harmonic_features_story.md  2.4.midi_transcription_story.md  2.5.drums_transcription_story.md  2.5.song_genre_guidance_story.md  2.6.energy_feature_schema.md  3.1.energy_feature_schema.md  3.1.midi_transcription_story.md  3.1.section_segmentation_story.md  3.2.drums_transcription_story.md  3.2.section_segmentation_story.md  3.2.structural_integrity_audit_story.md  3.2.symbolic_feature_engineering_story.md  3.3.energy_feature_derivation_story.md  3.3.key_tonal_center_story.md  3.3.symbolic_feature_engineering_story.md  3.3.temporal_alignment_story.md  3.4.llm_friendly_abstraction_story.md  3.4.section_hints_story.md  3.4.structural_integrity_audit_story.md  3.4.temporal_alignment_story.md  3.5.llm-friendly_song_map_abstraction.md  3.5.section_hints_story.md  (+96 more)
(+201 files in other folders)
