[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-light-song-v2"
version = "0.1.0"
description = "Phase-1 analyzer for audio-to-lighting pipeline artifacts"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
analyze = "analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"analyzer.contracts" = ["*.json"]
